fix overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -25,3 +25,7 @@ a, button {
   position: relative;
   z-index: 40;
 }
+
+.pin-spacer {
+  overflow: hidden !important;
+}
